# pytest-watch

./: pyproject.toml
pytest_watch/: config.py
